# tfstor

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yaml  release.yaml
benches/: casfs_benchmark.rs  fjall_benchmark.rs
docs/: refcount.md
docs/adr/: 0001-initial-architecture-overview.md  0002-blake3-hash-migration.md
metastore/: Cargo.toml
metastore/src/: errors.rs  lib.rs  meta_store.rs  object.rs  traits.rs
metastore/src/stores/: fjall.rs  fjall_notx.rs  mod.rs  test_utils.rs
respcas/: Cargo.toml
respcas/src/: cmd.rs  lib.rs  main.rs  resp.rs  server.rs  storage.rs
respcas/tests/: integration_test.rs
respd/: Cargo.toml  README.md
respd/src/: cmd.rs  conn.rs  lib.rs  main.rs  namespace.rs  property.rs  resp.rs  server.rs  storage.rs
respd/tests/: command_test.rs  integration_test.rs  password_test.rs
s3cas/: Cargo.toml  README.md
s3cas/src/: check.rs  inspect.rs  lib.rs  main.rs  metrics.rs  s3fs.rs
s3cas/src/cas/: block_stream.rs  buffered_byte_stream.rs  fs.rs  multipart.rs  range_request.rs
s3cas/tests/: it_s3.rs
src/: cas.rs  inspect.rs  internal_macros.rs  lib.rs  main.rs  metrics.rs  retrieve.rs  s3fs.rs
src/cas/: block.rs  block_stream.rs  bucket_meta.rs  errors.rs  fjall_store.rs  fs.rs  meta_errors.rs  meta_store.rs  mock_casfs.rs  multipart.rs  object.rs  sled_store.rs
src/metastore/: block.rs  bucket_meta.rs  constants.rs  errors.rs  fjall_store.rs  meta_store.rs  mod.rs  object.rs  traits.rs
src/metastore/stores/: fjall.rs  fjall_notx.rs  mod.rs  test_utils.rs
tests/: it_s3.rs
