[package]
name = "s3-cas"
version = "0.1.0"
edition = "2018"
authors = ["Lee Smet <lee.smet@hotmail.com>"]
readme = "README.md"
description = "An experimental S3 server using a cas storage layer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
vendored = ["openssl"]
asm = ["md-5/asm"]


[dependencies]
tokio = { version = "1", features = ["full"] }
fjall = "2.5"
async-trait = "0.1"
md-5 = { version = "0.10.6" }
futures = "0.3"
async-fs = "2.1"
faster-hex = "0.10.0"
uuid = { version = "1.12", features = ["v4"] }
chrono = "0.4"
anyhow = { version = "1.0.95" }
dotenv = { version = "0.15" }
openssl = { version = "0.10.68", features = ["vendored"], optional = true }
prometheus = { version = "0.13.4", features = ["process"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
s3s = { git = "https://github.com/Nugine/s3s" }
bytes = "1.7.1"
hyper-util = { version = "0.1.9", features = [
    "server-auto",
    "server-graceful",
    "http1",
    "http2",
    "tokio",
] }
rusoto_core = "0.48.0"
hyper = { version = "1.6.0" }
http-body-util = "0.1.2"
clap = { version = "4.5.32", features = ["derive"] }


[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
s3s-aws = { git = "https://github.com/Nugine/s3s", package = "s3s-aws" }
aws-config = { version = "1.5.8", default-features = false }
aws-credential-types = { version = "1.2.1", features = ["test-util"] }
aws-sdk-s3 = { version = "1.56.0", features = ["behavior-version-latest"] }
once_cell = "1.20.2"
tempfile = "3"
log = "0.4.14"
env_logger = "0.11.6"
