[package]
name = "metastore"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Metadata storage for the S3 CAS server"

[dependencies]
fjall = { workspace = true }
async-trait = { workspace = true }
md-5 = { workspace = true }
futures = { workspace = true }
async-fs = { workspace = true }
faster-hex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
tempfile = { workspace = true }
